--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,6 +9,8 @@
     "start": "NODE_ENV=development webpack serve --mode development"
   },
   "dependencies": {
+    "@mediapipe/drawing_utils": "^0.3.1620248257",
+    "@mediapipe/pose": "^0.4.1633558788",
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow/tfjs": "^3.9.0",
     "@tensorflow/tfjs-backend-cpu": "^3.9.0",
