--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "reset": "rm -rf node_modules packages/*/node_modules",
     "serve": "yarn workspace @dev/app serve",
     "start": "yarn workspace @dev/app start",
-    "dedupe": "yarn-deduplicate",
+    "dedupe": "yarn-deduplicate && yarn",
     "dedupe:list": "yarn-deduplicate --list",
     "update": "yarn upgrade-interactive",
     "update:latest": "yarn upgrade-interactive --latest",
@@ -58,17 +58,17 @@
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
-    "husky": "^7.0.0",
+    "husky": "^7.0.4",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
-    "type-coverage": "^2.18.2",
-    "typescript": "^4.4.3",
+    "type-coverage": "^2.18.3",
+    "typescript": "^4.4.4",
     "yarn-deduplicate": "^3.1.0"
   }
 }
