--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -26,6 +26,7 @@
     "raf": "^3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-sketch-canvas": "^6.0.3",
     "react-webcam": "^6.0.0"
   },
   "devDependencies": {
