--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -28,7 +28,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-sketch-canvas": "^6.1.0",
-    "react-webcam": "^6.0.0"
+    "react-webcam": "^6.0.0",
+    "rxjs": "^7.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
