feat(web): add toxicity classifier example

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,6 +15,7 @@
     "@mediapipe/pose": "^0.5.1635988162",
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow-models/face-landmarks-detection": "^0.0.3",
+    "@tensorflow-models/toxicity": "^1.2.2",
     "@tensorflow/tfjs": "^3.11.0",
     "@tensorflow/tfjs-backend-cpu": "^3.11.0",
     "@tensorflow/tfjs-backend-wasm": "^3.11.0",
