--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": true,
   "engines": {
-    "node": "^12"
+    "node": "^12 || ^14"
   },
   "eslintConfig": {
     "env": {
@@ -49,6 +49,7 @@
     "dedupe": "yarn-deduplicate && yarn",
     "dedupe:list": "yarn-deduplicate --list",
     "update": "yarn upgrade-interactive",
+    "update:dedupe": "yarn-deduplicate && yarn",
     "update:latest": "yarn upgrade-interactive --latest",
     "prepare": "husky install"
   },
@@ -56,19 +57,19 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
-    "eslint": "^8.10.0",
-    "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.2",
-    "husky": "^7.0.4",
-    "prettier": "^2.5.1",
+    "@commitlint/cli": "^17.2.0",
+    "@commitlint/config-conventional": "^17.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "husky": "^8.0.2",
+    "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
-    "type-coverage": "^2.21.0",
-    "typescript": "^4.5.5",
-    "yarn-deduplicate": "^3.1.0"
+    "type-coverage": "^2.23.0",
+    "typescript": "^4.9.3",
+    "yarn-deduplicate": "^6.0.0"
   }
 }
