--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -30,22 +30,22 @@
     "hoist-non-react-statics": "^3.3.2",
     "immutability-helper": "^3.1.1",
     "raf": "^3.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-sketch-canvas": "^6.2.0",
-    "react-webcam": "^6.0.1",
+    "react-webcam": "^7.0.1",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.0",
-    "@hot-loader/react-dom": "^17.0.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@types/copy-webpack-plugin": "^10.1.0",
     "@types/html-webpack-plugin": "^3.2.6",
     "@types/node": "^18.14.0",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
     "babel-loader": "^9.1.2",
@@ -55,7 +55,7 @@
     "fibers": "^5.0.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "react-hot-loader": "^4.13.1",
+    "react-refresh": "^0.14.0",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
     "serve": "^14.2.0",
