--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,17 +11,18 @@
   "dependencies": {
     "@cloud-annotations/object-tracking": "^0.0.5",
     "@mediapipe/drawing_utils": "^0.3.1675466124",
+    "@mediapipe/face_mesh": "^0.4.1633559619",
     "@mediapipe/objectron": "^0.4.1675468480",
     "@mediapipe/pose": "^0.5.1675469404",
     "@tensorflow-models/coco-ssd": "^2.2.2",
-    "@tensorflow-models/face-landmarks-detection": "^0.0.3",
+    "@tensorflow-models/face-landmarks-detection": "^1.0.2",
     "@tensorflow-models/toxicity": "^1.2.2",
-    "@tensorflow/tfjs": "^3.13.0",
-    "@tensorflow/tfjs-backend-cpu": "^3.13.0",
-    "@tensorflow/tfjs-backend-wasm": "^3.13.0",
-    "@tensorflow/tfjs-backend-webgl": "^3.13.0",
-    "@tensorflow/tfjs-converter": "^3.13.0",
-    "@tensorflow/tfjs-core": "^3.13.0",
+    "@tensorflow/tfjs": "^4.2.0",
+    "@tensorflow/tfjs-backend-cpu": "^4.2.0",
+    "@tensorflow/tfjs-backend-wasm": "^4.2.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.2.0",
+    "@tensorflow/tfjs-converter": "^4.2.0",
+    "@tensorflow/tfjs-core": "^4.2.0",
     "@tensorflow/tfjs-vis": "^1.5.1",
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
