--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": true,
   "engines": {
-    "node": "^12 || ^14"
+    "node": "^14 || ^16 || ^18 || ^20"
   },
   "eslintConfig": {
     "env": {
